--- a/Combee/Combee.csproj
+++ b/Combee/Combee.csproj
@@ -114,7 +114,12 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Methods.cs" />
+    <Compile Include="NewPost.xaml.cs">
+      <DependentUpon>NewPost.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Organization.xaml.cs">
+      <DependentUpon>Organization.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Post.xaml.cs">
       <DependentUpon>Post.xaml</DependentUpon>
     </Compile>
@@ -178,6 +183,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </DesignData>
+    <Page Include="NewPost.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Organization.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Post.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -214,7 +227,6 @@
     <Content Include="Images\appbar.add.rest.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="appbar.delete.rest.png" />
     <Content Include="Assets\AppBar\circle.png" />
     <Content Include="Assets\AppBar\null.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
